# career4u-be

./: .env  .gitignore  logging.ini  pyproject.toml
resources/: alessandro_competencies.json  competencies_to_action.json  competenze.txt  levels_competencies.json
src/: main.py  test.py
src/main/: test.py
src/persistence/dbconnector/: db_connector.py
src/persistence/dbio/: cursor.py
src/progetto_settembre_prove.egg-info/: PKG-INFO  SOURCES.txt
